--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,7 @@
   box-shadow: 0.4em 0.4em 0.4em 0 #979797;
 }
 .restaurant figure img {
+  display: block;
   width: 100%;
   height: 11rem;
   border-radius: 25px 25px 0 0;
@@ -35,29 +36,35 @@
   border-radius: 5px;
 }
 .restaurant figure figcaption {
-  padding: 1% 0 0 5%;
+  padding: 0 0 0 5%;
   margin: 0;
   display: grid;
-  grid-template-columns: 1.5fr 0.5fr;
+  grid-template-columns: 1.7fr 0.3fr;
   grid-template-rows: 1fr 1fr;
   gap: 0px 0px;
+  height: 4rem;
   grid-template-areas: "titre coeur" "soustitre coeur";
   justify-items: start;
   align-items: center;
 }
-.restaurant figure figcaption h3 {
+.restaurant figure figcaption h2 {
   margin: 0;
   padding: 0;
   grid-area: titre;
+  font-size: 1.1em;
+  align-self: end;
 }
 .restaurant figure figcaption p {
   grid-area: soustitre;
   margin: 0;
   padding: 0;
+  font-size: 0.9em;
+  align-self: start;
 }
 .restaurant figure figcaption .coeur {
   grid-area: coeur;
-  justify-self: center;
+  justify-self: top;
+  align-self: top;
   font-size: 1.8em;
 }
 
@@ -72,6 +79,9 @@
   }
   .restaurant figure img {
     height: 16em;
+  }
+  .restaurant figure figcaption {
+    height: 4em;
   }
 }
 #home {
@@ -291,8 +301,8 @@
 .choix:hover .selectplat {
   transform: scaleX(1);
   width: 4em;
-  transition: transform 80ms, width 600ms;
-  transition-delay: 0s, 0s;
+  transition: transform 10ms, width 600ms;
+  transition-delay: 0ms, 0s;
   transform-origin: 50% 50%;
 }
 .choix .fa-check-circle {
@@ -319,9 +329,9 @@
   width: 0.2vw;
   height: 100%;
   transform: scaleX(0);
-  transition: transform 80ms, width 600ms;
-  transition-delay: 450ms, 0s;
-  transform-origin: 0% 50%;
+  transition: transform 10ms, width 600ms;
+  transition-delay: 590ms, 0s;
+  transform-origin: 50% 50%;
 }
 
 @media (min-width: 768px) {
@@ -539,6 +549,7 @@ footer {
 .btn_gradient:hover {
   box-shadow: 0.25em 0.25em 0.25em 0 #d1d1d1;
   opacity: 0.8;
+  cursor: pointer;
 }
 .btn_gradient:focus {
   outline: 0;
@@ -559,6 +570,7 @@ footer {
 .coeur:hover {
   -webkit-text-fill-color: transparent;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .loader {
